src/PclSharp/Filters/HeightMap2DOfXYZ.generated.cs

// Code generated by a template
using System;
using System.Collections.Generic;
using System.Numerics;
using System.Runtime.InteropServices;
using PclSharp.Struct;
using PclSharp.Std;
namespace PclSharp.Filters
{
	public static partial class Invoke
	{
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr filters_heightmap2d_xyz_ctor();
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void filters_heightmap2d_xyz_delete(ref IntPtr ptr);
		//methods
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void filters_heightmap2d_xyz_filter(IntPtr ptr, IntPtr output);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void filters_heightmap2d_xyz_setInputCloud(IntPtr ptr, IntPtr cloud);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void filters_heightmap2d_xyz_setIndices(IntPtr ptr, IntPtr indices);

		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void filters_heightmap2d_xyz_setGroundCoeffs(IntPtr ptr, IntPtr coeffs);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern int filters_heightmap2d_xyz_getMaximaNumberAfterFiltering(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr filters_heightmap2d_xyz_getMaximaCloudIndicesFiltered(IntPtr ptr);

		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void filters_heightmap2d_xyz_setBinSize(IntPtr ptr, float value);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern float filters_heightmap2d_xyz_getBinSize(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void filters_heightmap2d_xyz_setMinDistBetweenMaxima(IntPtr ptr, float value);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern float filters_heightmap2d_xyz_getMinDistBetweenMaxima(IntPtr ptr);
	}

	public class HeightMap2DOfXYZ : Heightmap2D<PointXYZ>
	{
		public HeightMap2DOfXYZ()
		{
			_ptr = Invoke.filters_heightmap2d_xyz_ctor();
		}

		public override float BinSize
		{
			get { return Invoke.filters_heightmap2d_xyz_getBinSize(_ptr); }
            set { Invoke.filters_heightmap2d_xyz_setBinSize(_ptr, value); }
		}

		public override float MinDistBetweenMaxima
		{
			get { return Invoke.filters_heightmap2d_xyz_getMinDistBetweenMaxima(_ptr); }
            set { Invoke.filters_heightmap2d_xyz_setMinDistBetweenMaxima(_ptr, value); }
		}

		public override int MaximaNumberAfterFiltering
			=> Invoke.filters_heightmap2d_xyz_getMaximaNumberAfterFiltering(_ptr);

		public override VectorOfInt MaximaCloudIndicesFiltered
			=> new VectorOfInt(Invoke.filters_heightmap2d_xyz_getMaximaCloudIndicesFiltered(_ptr));

		public override void SetInputCloud(PointCloud<PointXYZ> cloud)
		{
			Invoke.filters_heightmap2d_xyz_setInputCloud(_ptr, cloud);
		}

		public override void SetIndices(VectorOfInt indices)
		{
			Invoke.filters_heightmap2d_xyz_setIndices(_ptr, indices);
		}

		public override void SetGroundCoeffs(Eigen.VectorXf coeffs)
			=> Invoke.filters_heightmap2d_xyz_setGroundCoeffs(_ptr, coeffs);

		public override void filter(PointCloud<PointXYZ> output)
		{
			Invoke.filters_heightmap2d_xyz_filter(_ptr, output);
		}

		public override ref PointXYZ this[int idx]
		{
			get { return ref this.Index(idx); }
		}

		protected override void DisposeObject()
		{
			Invoke.filters_heightmap2d_xyz_delete(ref _ptr);
		}
	}
}
